<resources>
    <string name="app_name">GPShare\'s</string>
    <string name="title_activity_map">Map</string>
    <string name="email">Email</string>
    <string name="password">Palavra-passe</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="ForgotPW">Esqueci-me da password</string>
    <string name="nome">Nome inteiro</string>
    <string name="idade">Idade</string>
    <string name="reset">Reset Password</string>
    <string name="menu_Open">Open</string>
    <string name="menu_Close">Close</string>
    <string name="MAP">Mapa</string>
    <string name="Auth">Autentificação</string>
    <string name="Setting">Settings</string>
    <string name="google_Auth">Sign in with google</string>
    <string name="nomeInt">Nome:</string>
    <string name="emailDisplay">Email:</string>
    <string name="ageDisplay">Idade:</string>
    <string name="facebook_app_id">5314220315261820</string>
    <string name="fb_login_protocol_scheme">fb5314220315261820</string>
    <string name="marcar_lugar">Marcar</string>
    <string-array name="tipo">
        <item>Restaurantes</item>
        <item>Centros Comerciais</item>
        <item>Cinemas</item>
    </string-array>
    <string-array name="Avaliacao">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="tipo_de_estabelecimento">Tipo de estabelecimento</string>
    <string name="avaliacao">Avaliação</string>
    <string name="coment">Comentario</string>
    <string name="nome_do_estabelecimento">Nome do estabelecimento</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="cinemas">Cinemas</string>
    <string name="visibilidade">Visibilidade</string>
    <string-array name="tipo_visibilidade">
        <item>Privado</item>
        <item>Publico</item>
        <item>Amigos</item>
    </string-array>
    <string name="F_restaurantes">Restaurantes</string>
    <string name="F_cinemas">Cinemas</string>
    <string name="Filter">Filtrar</string>
    <string name="identificador">Identificador:</string>
    <string name="F_centroComercial">Centros comerciais</string>
    <string name="interesse">Indique-nos a area de interesse (Raio em Kms dentro do qual ser-lhe-ão mostrados os pontos de interesse no mapa): </string>
    <string name="OK">OK</string>
    <string name="valor">Indique o valor em Kms</string>
    <string name="adicionar_local">Adicionar_local</string>
    <string name="redefinir_area_de_interesse">Area de interesse</string>
    <string name="parar">Parar</string>
    <string name="cinema_restaurante">Cinema/ Restaurante ...</string>
    <string name="_1_a_5">1 a 5</string>
    <string name="coment_rios">Comentários ...</string>
    <string name="publico_privado">Publico/Privado ...</string>
</resources>