<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrar">

    <EditText
        android:id="@+id/nomeDoUtilizador"
        android:layout_width="400dp"
        android:layout_height="55dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/idadeDoUtilizador"
        android:layout_width="400dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/idade"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeDoUtilizador"
        android:importantForAutofill="no"
         />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="400dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:textSize="24sp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idadeDoUtilizador"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="400dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="380dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#0Ed6B9"
        android:text="@string/registrar"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>